--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
     "generate": "plop --plopfile generators/index.js"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^6.7.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
@@ -25,6 +33,7 @@
     "@babel/runtime": "^7.10.4",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.1.0",
+    "babel-plugin-root-import": "^6.5.0",
     "eslint": "^7.3.1",
     "jest": "^26.1.0",
     "metro-react-native-babel-preset": "^0.60.0",
